package domain.factory;

import domain.model.Deck;

public class DeckFactory {
    public Deck buildDeck(int numPlayers) { return null; }
}